# pp-matrix-multiple

./: build.sh  gen_values.sh
include/: consts.h
resources/: linuxapi.txt  openmp.txt
src/: CMakeLists.txt  data.txt  graphics.py  main.cpp  multiple.cpp
